[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "flash-kmeans-mlx"
version = "0.1.0"
description = "IO-aware batched K-Means for Apple Silicon, ported from Flash-KMeans (Triton/CUDA) to pure MLX."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Han Xiao", email = "han.xiao@jina.ai" },
]
keywords = [
    "kmeans", "clustering", "mlx", "apple-silicon", "gpu",
    "machine-learning", "metal", "batch-kmeans", "unsupervised-learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Operating System :: MacOS",
]
dependencies = [
    "mlx>=0.22",
    "numpy",
]

[project.optional-dependencies]
benchmark = ["scikit-learn"]

[project.urls]
Homepage = "https://github.com/hanxiao/flash-kmeans-mlx"
Repository = "https://github.com/hanxiao/flash-kmeans-mlx"
Issues = "https://github.com/hanxiao/flash-kmeans-mlx/issues"

[tool.setuptools.packages.find]
include = ["flash_kmeans_mlx*"]
